refactor(project): use SQL aggregation for populateMemberSummary
- Replace full table scan (selectList + Java groupBy/distinct/limit)
  with SQL COUNT(DISTINCT) and ROW_NUMBER() window function
- Add ProjectMemberMapper.countDistinctUsersByProjects() for batch count
- Add ProjectMemberMapper.selectTopMembersByProjects() for top N members
- Create MemberCountRow and TopMemberRow result classes
- Reduces memory from O(N*M) rows to O(N+N*5) rows for 20 projects

Performance: 20 projects now loads ~120 rows max (vs potentially 8000)

Closes REQ-167